--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 .card {
     font-family: "Chakra Petch", serif;
     line-height: 1.3;
-    padding: 2rem;
+    padding: 3rem;
     background-color: rgb(80, 80, 62);
     border-radius: 2rem;
     color: white;
@@ -14,9 +14,9 @@
 .card__excerpt {}
   
 .card__image {
-    width: 90%;
+    width: 100%;
     object-fit: contain;
-    align-items: center;
+    align-items: left;
     margin: 1.5rem 0;
     border-radius: 2rem;;
     padding-bottom: 1rem;
